--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Felipe Pedrosa",
   "license": "ISC",
   "devDependencies": {
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11"
   }
 }
