--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "workshop-spring-boot-mongodb",
-  "version": "1.0.0",
-  "description": "Learning spring boot",
-  "main": "index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky"
   },
   "author": "Felipe Pedrosa",
